[project]
name = "statewave"
version = "0.9.0"
description = "Open-source memory runtime for AI agents — durable, structured context with provenance."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1,<1",
    "uvicorn[standard]>=0.47.0,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.14.1,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.31.0,<1",
    "alembic>=1.18.4,<2",
    "pgvector>=0.4.2,<1",
    "tiktoken>=0.13.0,<1",
    "structlog>=25.5.0,<26",
    "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.23,<2",
    "httpx>=0.28.1,<1",
    "ruff>=0.15.13,<1",
]
llm = [
    "litellm>=1.85.1,<2",
]
otel = [
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.41.1,<2",
    "opentelemetry-exporter-otlp>=1.42.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
